--- a/templates/graphique.html
+++ b/templates/graphique.html
@@ -3,46 +3,40 @@
     <meta charset="UTF-8" />
     <title>Metrique</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  </head>
+  </head>  
 
   <body>
     <div id="chart_div"></div>
     <script>
       google.charts.load('current', { packages: ['corechart'] });
-      google.charts.setOnLoadCallback(drawColumnChart);
+      google.charts.setOnLoadCallback(drawBackgroundColor);
+     function drawBackgroundColor() {
+    function drawChart(data) {
+    // Convertir les données récupérées en un tableau utilisable par Google Charts
+    var dataTable = new google.visualization.DataTable();
+    dataTable.addColumn('string', 'Date');
+    dataTable.addColumn('number', 'Valeur');
+    data.results.forEach(entry => {
+      var date = new Date(entry.Jour * 1000);
+      dataTable.addRow([date.toLocaleDateString(), entry.temp]);
+    });
 
-      function drawColumnChart(data) {
-        // Convertir les données récupérées en un tableau utilisable par Google Charts
-        var dataTable = new google.visualization.DataTable();
-        dataTable.addColumn('string', 'Date');
-        dataTable.addColumn('number', 'Température');
-        data.results.forEach(entry => {
-          var date = new Date(entry.Jour * 1000);
-          dataTable.addRow([date.toLocaleDateString(), entry.temp]);
-        });
-
-        // Configurer les options du graphique à colonnes
-        var options = {
-          title: 'Températures de Paris pour les 16 prochains jours',
-          legend: { position: 'bottom' },
-          hAxis: {
-            title: 'Date'
-          },
-          vAxis: {
-            title: 'Température (°C)'
-          }
-        };
-
-        var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
-        chart.draw(dataTable, options);
-      }
-
-      // Récupération de données depuis notre API /paris/
-      fetch('/paris/')
-        .then(response => response.json())
-        .then(data => {
-          drawColumnChart(data);
-        });
+    // Configurer les options du graphique en ligne
+    var options = {
+      title: 'Évolution des températures de Paris pour les 16 prochains jours',
+      curveType: 'function',
+      legend: { position: 'bottom' }
+    };
+    var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+    chart.draw(dataTable, options);
+  }
+  // Récupération de données depuis notre API /paris/
+  fetch('/paris/')
+    .then(response => response.json())
+    .then(data => {
+      drawChart(data);
+    })
+}
     </script>
   </body>
 </html>
